--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,5 @@
 greeting:
     path: "/{name}"
-    defaults: { _controller: \App\Controller\GreeterController::greetAction, _format: json }
+    defaults: { _controller: \App\Controller\GreeterController::greetAction, _format: json, name: "world" }
     requirements: { _format: json }
     methods: [ GET ]
